# libgcroots

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  alpha_mach_dep.S  autogen.sh  configure.ac  docker-compose.yml  extract-news.rb  gcroots.c  gcroots.pc.in  ia64_save_regs_in_stack.s  libtool-version.mk  mach_dep.c  make-dist.sh  mark.c  mips_sgi_mach_dep.s  mips_ultrix_mach_dep.s  news.md  rs6000_mach_dep.s  sparc_mach_dep.S  sparc_netbsd_mach_dep.s  sparc_sunos4_mach_dep.s
.github/workflows/: linux.yml
CVS/: Entries
autom4te.cache/: output.0  requests  traces.0
ci/: distcheck.sh
ci/dockerfiles/: debian-10.dockerfile
cord/CVS/: Entries
doc/CVS/: Entries
include/: gcroots.h
include/CVS/: Entries
include/private/: gc_priv.h  gcconfig.h  gcroots_priv.h
include/private/CVS/: Entries
libatomic_ops-1.2/CVS/: Entries
libatomic_ops-1.2/doc/CVS/: Entries
libatomic_ops-1.2/src/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/sysdeps/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/sysdeps/gcc/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/sysdeps/hpc/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/sysdeps/ibmc/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/sysdeps/icc/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/sysdeps/msftc/CVS/: Entries
libatomic_ops-1.2/src/atomic_ops/sysdeps/sunc/CVS/: Entries
libatomic_ops-1.2/tests/CVS/: Entries
m4/: Makefile.am
tests/CVS/: Entries
windows-untested/CVS/: Entries
